# PluginFramework

./: .gitignore  Bar.cc  CMakeLists.txt  Foo.cc  LICENSE  Makefile  Plugin  README.md  main.cc  mainArg.cc  takesArg.hh
args_test/: Baz.cc  CMakeLists.txt  main.cc  takesArg.hh
base_test/: Bar.cc  CMakeLists.txt  Foo.cc  hasPrint.hh  main.cc
include/: Plugin
